<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.liquidacion.GiveUp.FrgGiveUpResult">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/orange_app"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/Base.Theme.AppCompat.Light"
                app:titleTextColor="#ffffff"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_desde"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                android:layout_marginTop="30dp"
                android:text="@string/fechaDesde"
                style="@style/textoNormal"/>

            <TextView
                android:id="@+id/tv_hasta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_desde"
                android:layout_marginTop="30dp"
                android:text="@string/fechaHasta"
                style="@style/textoNormal"/>

            <ImageButton
                android:id="@+id/btn_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:layout_constraintBottom_toTopOf="@id/sv_results"
                android:src="@drawable/ic_get_app_24px"
                android:tint="@color/white"
                android:padding="2dp"
                android:background="@color/orange_app"
                android:clickable="true"
                android:elevation="5dp"/>

            <TextView
                android:id="@+id/tv_result1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_hasta"
                android:layout_marginTop="30dp"
                android:text="@string/tv1"
                style="@style/textoNormal"/>

            <ScrollView
                android:id="@+id/sv_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/tv_result1"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp"
                android:background="@drawable/bg_orange_background">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/tv_remunerativo_title"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/textoInterno"
                            android:text="@string/remunerativo"
                            android:layout_marginVertical="16dp"/>

                        <TextView
                            android:id="@+id/tv_remunerativo_1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            style="@style/textoInterno"
                            android:text="@string/sueldoMes"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"/>
                        <TextView
                            android:id="@+id/tv_remunerativo_2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            style="@style/textoInterno"
                            android:text="@string/SAC"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"/>
                        <TextView
                            android:id="@+id/tv_no_remunerativo_title"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/textoInterno"
                            android:text="@string/no_remunerativo"
                            android:layout_marginVertical="16dp"/>

                        <TextView
                            android:id="@+id/tv_no_remunerativo_1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            style="@style/textoInterno"
                            android:text="@string/vacaciones_nog"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"/>
                        <TextView
                            android:id="@+id/tv_no_remunerativo_2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            style="@style/textoInterno"
                            android:text="@string/sac_vacaciones"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"/>
                        <TextView
                            android:id="@+id/tv_no_remunerativo_6"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            style="@style/textoInterno"
                            android:text="@string/integracionMesDespido"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"
                            android:visibility="gone"/>
                        <TextView
                            android:id="@+id/tv_no_remunerativo_7"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            style="@style/textoInterno"
                            android:text="@string/sac_integracion"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"
                            android:visibility="gone"/>
                        <TextView
                            android:id="@+id/tv_no_remunerativo_3"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            style="@style/textoInterno"
                            android:text="@string/preaviso"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"
                            android:visibility="gone"/>
                        <TextView
                            android:id="@+id/tv_no_remunerativo_4"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            style="@style/textoInterno"
                            android:text="@string/sac_preaviso"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"
                            android:visibility="gone"/>
                        <TextView
                            android:id="@+id/tv_no_remunerativo_5"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            style="@style/textoInterno"
                            android:text="@string/antiguedad"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"
                            android:visibility="gone"/>
                        <TextView
                            android:id="@+id/tv_no_remunerativo_8"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            style="@style/textoInterno"
                            android:text="@string/topeoTxt"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"
                            android:visibility="gone"/>

                        <TextView
                            android:id="@+id/tv_descuentos_title"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/textoInterno"
                            android:text="@string/descuentos"
                            android:layout_marginVertical="16dp"/>
                        <TextView
                            android:id="@+id/tv_descuentos_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/textoInterno"
                            android:text="@string/jubilacion"
                            android:layout_marginVertical="8dp"
                            android:gravity="center"/>
                        <TextView
                            android:id="@+id/tv_descuentos_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/textoInterno"
                            android:text="@string/ley"
                            android:layout_marginVertical="8dp"
                            android:gravity="center"/>
                        <TextView
                            android:id="@+id/tv_descuentos_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/textoInterno"
                            android:text="@string/obrasocial"
                            android:layout_marginVertical="8dp"
                            android:gravity="center"/>

                    </LinearLayout>
            </ScrollView>

            <TextView
                android:id="@+id/tv_monto_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sv_results"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginTop="32dp"
                android:text="@string/monto_total"
                app:layout_constraintBottom_toBottomOf="@id/btn_contactus"
                android:background="@drawable/bg_orange_background"
                android:layout_marginHorizontal="24dp"
                android:paddingVertical="8dp"
                android:layout_marginBottom="40dp"/>

            <Button
                android:id="@+id/btn_contactus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:text="Solicitar asesoramiento"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:background="@drawable/bg_orange_background"
                app:layout_constraintTop_toBottomOf="@id/tv_monto_total"
                android:layout_marginBottom="40dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>